@@ -29,7 +29,8 @@
   * Provide a way to only follow permanent redirects (301)
     automatically: agent.redirect_ok = :permanent   GH #73
   * Documented various Mechanize accessors.  GH #66
-  * Mechanize now uses net-http-digest_auth.  Fixes GH #31
+  * Mechanize now uses net-http-digest_auth.  GH #31
+  * Mechanize now implements session cookies.  GH #78
 
 * Bug Fixes:
 
